--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<!-- TODO : add classpath here -->
-	<classpathentry kind="lib" path="C:/Users/GUEDRI/Downloads/mysql-connector.jar"/>
+	<classpathentry kind="lib" path="C:\Program Files (x86)\MySQL\Connector J 8.0\mysql-connector-j-8.0.33.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
